/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "ManeuverTypeEnum.proto";
import "ManeuverDirectionEnum.proto";

message NavigationTurnEvent {
  required string street_name = 1;
  required ManeuverDirection.Enum maneuverDirection = 2;
  required ManeuverType.Enum maneuverType = 3;
  required bytes turnImage = 4;
  required uint32 roundaboutExitNumber = 5;
  required uint32 roundaboutExitAngle = 6;
}
