/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message NavigationStatus {
  enum Enum {
    UNAVAILABLE = 0;
    ACTIVE = 1;
    INACTIVE = 2;
    REROUTING = 3;
  }

  required Enum status = 1;
}
