/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message NavigationTurnType {
  enum Enum {
    UNKNOWN = 0;
    IMAGE = 1;
    ENUM = 2;
  }
}
